--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,17 +3,17 @@ server.servlet.context-path=/pontointeligenteapi
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:pontointeligente
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+flyway.enabled=false
 
-spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:insert_usuario_teste.sql
+#spring.datasource.initialization-mode=always
+#spring.datasource.data=classpath:insert_usuario_teste.sql
 
+#Swegger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
-
-
 
 # JWT
 jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
