--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,6 @@
 server.port=8082
+server.servlet.context-path=/pontointeligenteapi
+
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/cursospring
 spring.datasource.username=postgres
@@ -7,6 +9,17 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.baseline-on-migrate=true
 
+#spring.datasource.initialization-mode=always
+#spring.datasource.data=classpath:insert_usuario_teste.sql
 
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+paginacao.qtd_por_pagina=10
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com dura\u00e7\u00e3o de 7 dias
+jwt.expiration=604800
